Attempted auth implementation.